--- a/AdobePortfolio/lina-skukauské/index.html
+++ b/AdobePortfolio/lina-skukauské/index.html
@@ -6,11 +6,25 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lina Skukauské - Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="style/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet" />
   </head>
 
   <body>
+    <header>
+      <div>
+        <h1><a class="main-title" href="">Lina Skukauské</a></h1>
+      </div>
 
+      <nav>
+        <ul>
+          <li><a class="active-option" href="">Portfolio</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Blog</a></li>
+        </ul>
+      </nav>
+    </header>
   </body>
 
 </html>
