--- a/AdobePortfolio/lina-skukauské/index.html
+++ b/AdobePortfolio/lina-skukauské/index.html
@@ -19,9 +19,9 @@
       <nav>
         <ul>
           <li><a class="active-option" href="">Portfolio</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="#" target="_blank">Blog</a></li>
         </ul>
       </nav>
     </header>
