--- a/AdobePortfolio/lina-skukauské/about.html
+++ b/AdobePortfolio/lina-skukauské/about.html
@@ -18,8 +18,8 @@
 
       <nav>
         <ul>
-            <li><a class="active-option" href="index.html">Portfolio</a></li>
-            <li><a href="">About</a></li>
+            <li><a href="index.html">Portfolio</a></li>
+            <li><a class="active-option" href="">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="#" target="_blank">Blog</a></li>
         </ul>
