--- a/AdobePortfolio/lina-skukauské/about.html
+++ b/AdobePortfolio/lina-skukauské/about.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lina Skukauské - Portfolio</title>
+    <title>Lina Skukauské - About</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet" />
   </head>
