--- a/AdobePortfolio/tom-hegen/index.html
+++ b/AdobePortfolio/tom-hegen/index.html
@@ -7,10 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tom Hegen - Work</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
   </head>
 
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a class="active-option" href="">Work</a></li>
+          <li><a href="about-contact.html">About/Contact</a></li>
+        </ul>
+      </nav>
 
+      <h1><a class="main-title" href="">Tom Hegen</a></h1>
+
+      <div>
+        <a href="#" target="_blank"><i class="fab fa-behance"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+      </div>
+    </header>
   </body>
 
 </html>
