Adicionando classe e links

--- a/AdobePortfolio/tom-hegen/index.html
+++ b/AdobePortfolio/tom-hegen/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tom Hegen - Work</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
   </head>
 
   <body>
@@ -15,7 +16,7 @@
       <nav>
         <ul>
           <li><a class="active-option" href="">Work</a></li>
-          <li><a href="about-contact.html">About/Contact</a></li>
+          <li><a class="with-hover" href="about-contact.html">About/Contact</a></li>
         </ul>
       </nav>
 
