--- a/AdobePortfolio/tom-hegen/index.html
+++ b/AdobePortfolio/tom-hegen/index.html
@@ -24,8 +24,8 @@
 
       <div>
         <a href="#" target="_blank"><i class="fab fa-behance"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
       </div>
     </header>
