--- a/AdobePortfolio/marina-weishaupt/index.html
+++ b/AdobePortfolio/marina-weishaupt/index.html
@@ -7,10 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale= 1.0" />
     <title>Marina Weishaupt - Work</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Belleza&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
   </head>
 
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a class="active-option" href="">Work</a></li>
+          <li><a class="with-hover" href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
 
+      <a href=""><h1 class="main-title">Marina Weishaupt</h1></a>
+
+      <div>
+        <a href="#" target="_blank"><i class="fab fa-behance"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-flickr"></i></a>
+      </div>
+    </header>
   </body>
 
 </html>
