Adicionando links e definindo cabeçalho

--- a/AdobePortfolio/andreas-levers/index.html
+++ b/AdobePortfolio/andreas-levers/index.html
@@ -7,10 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Andreas Levers - Work</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
   </head>
 
   <body>
-    
+    <header>
+      <nav>
+        <ul>
+          <li><a class="with-bold" href="">Work</a></li>
+          <li><a class="passive-option" href="about-contact.html">About / Contact</a></li>
+        </ul>
+      </nav>
+
+      <h1><a class="main-title" href="">Andreas Levers</a></h1>
+
+      <div>
+        <a href="#" target="_blank"><i class="fab fa-behance"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank"><i class="fab fa-flickr"></i></a>
+      </div>
+    </header>    
   </body>
 
 </html>
