--- a/AdobePortfolio/lina-skukauské/contact.html
+++ b/AdobePortfolio/lina-skukauské/contact.html
@@ -3,25 +3,28 @@
 <html lang="en">
 
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lina Skukauské - Contact</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <header>
-      <h1><a class="main-title" href="index.html">Lina Skukauské</a></h1>
-
-      <nav>
-        <ul>
-          <li><a href="index.html">Portfolio</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a class="active-option" href="">Contact</a></li>
-          <li><a href="#" target="_blank">Blog</a></li>
-        </ul>
-      </nav>
+      <div id="header-container">
+        <h1><a class="main-title" href="index.html">Lina Skukauské</a></h1>
+        <div id="nav-container">
+          <nav>
+            <ul>
+              <li><a href="index.html">Portfolio</a></li>
+              <li><a href="about.html">About</a></li>
+              <li><a class="active-menu" href="">Contact</a></li>
+              <li><a href="#" target="_blank">Blog</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </header>
   </body>
 
