Redefinindo conteúdo e reorganizando código

--- a/AdobePortfolio/ludwig-favre/index.html
+++ b/AdobePortfolio/ludwig-favre/index.html
@@ -3,30 +3,34 @@
 <html lang="en">
 
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ludwig Favre - Work</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet" />
   </head>
 
   <body>
     <header>
-        <nav>
-          <ul>
-            <li><a class="active-option" href="">Work</a></li>
-            <li><a href="about-contact.html">About & Contact</a></li>
-          </ul>
-        </nav>
-
-        <h1><a class="main-title" href="">Ludwig Favre</a></h1>
-
-        <div>
+      <div id="header-container">
+        <div id="nav-container">
+          <nav>
+            <ul>
+              <li><a class="active-menu" href="">Work</a></li>
+              <li><a href="about-contact.html">About & Contact</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div id="main-title-container">
+          <h1><a class="main-title" href="">Ludwig Favre</a></h1>
+        </div>
+        <div id="logo-container">
           <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
           <a href="#" target="_blank"><i class="fab fa-behance"></i></a>
           <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
+      </div>
     </header>
   </body>
 
